@@ -539,10 +539,29 @@ if test "$stick" = yes; then
       if test "$enableval" = no; then libjsw=yes; else libjsw=no; fi,
       libjsw=no)
       if test "$libjsw" = yes; then
-	AC_MSG_RESULT([no, use libjsw])
+        AC_MSG_RESULT([no, use libjsw])
       else
-	AC_MSG_RESULT(yes)
-	AC_DEFINE([USE_JOYSTICK], 1, [Defined if we're using hardware joysticks])
+        AC_MSG_RESULT(yes)
+        AC_DEFINE([USE_JOYSTICK], 1, [Defined if we're using hardware joysticks])
+      fi
+      ;;
+    gtk|xlib)
+      dnl These UIs could use SDL library for handling joysticks
+      AC_MSG_CHECKING([whether to use $UI's joystick support])
+      AC_ARG_ENABLE(ui-joystick,
+      [  --enable-ui-joystick    use UI-specific joystick code (where supported)],
+      if test "$enableval" = no; then libjsw=yes; else libjsw=no; fi,
+      libjsw=yes)
+      if test "$libjsw" = yes; then
+        AC_MSG_RESULT([no, use libjsw])
+      else
+        AC_MSG_RESULT(yes)
+        SDL_VERSION=1.2.4
+        AM_PATH_SDL($SDL_VERSION,		    
+          LIBS="$LIBS `sdl-config --libs`"
+          CPPFLAGS="$CPPFLAGS `sdl-config --cflags`"
+          AC_DEFINE([USE_JOYSTICK], 1, [Defined if we're using hardware joysticks]),
+          AC_MSG_WARN([SDL version $SDL_VERSION not found - joystick support disabled]))
       fi
       ;;
     *)
