@@ -27,4 +27,12 @@
 
 #include <config.h>
 
+#if !defined USE_JOYSTICK || defined HAVE_JSW_H
+/* Fake joystick, or override UI-specific handling */
 #include "../uijoystick.c"
+
+#else			/* #if !defined USE_JOYSTICK || defined HAVE_JSW_H */
+
+#include "../sdl/sdljoystick.c"
+
+#endif
